# lilgit

./: CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  bats.nix  ci.nix  default.nix  flake.nix  lilgit.bash  lilgit.nix  lilgitd  lilgitd.nix  lilgitd.rs  prompt_demo.sh  rustfmt.toml  setup.py  shell.nix  test.nix  update.nix
.github/workflows/: ci.yml
tests/: behavior.bats  gitparse.bash  gitstatus.bash  head.bats  head_nixpkgs.bats  helpers.bash  lilgit.bash  minimal_repo.bash  nixpkgs_repo.bash  repo.bash
