[package]
name = "lilgitd"
version = "0.2.0"
authors = ["Travis A. Everett <travis.a.everett@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/abathur/lilgit"
description = "A smol (quick) git status prompt plugin"
edition = "2018"

[[bin]]
name = "lilgitd"
path = "lilgitd.rs"

[dependencies]
git2 = "0.13.16"

[dependencies.tokio]
version = "1.0.2"
features = [
	"macros",
	"signal",
	"rt-multi-thread"
]
