[package]
name = "lilgitd"
version = "0.3.1"
authors = ["Travis A. Everett <travis.a.everett@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/abathur/lilgit"
description = "A smol (quick) git status prompt plugin"
edition = "2018"

[[bin]]
name = "lilgitd"
path = "lilgitd.rs"

[dependencies]
gix = "0.56.0"

[dependencies.tokio]
version = "1.0.2"
features = [
	"macros",
	"signal",
	"rt-multi-thread"
]
